[gd_scene load_steps=9 format=3 uid="uid://nqupygtbema1"]

[ext_resource type="Script" path="res://addons/godOSC/scripts/OSCClient.gd" id="1_8dhcu"]
[ext_resource type="Script" path="res://addons/godOSC/demo/demo.gd" id="1_jcc48"]
[ext_resource type="Script" path="res://addons/godOSC/scripts/OSCServer.gd" id="2_ey2x6"]
[ext_resource type="Script" path="res://addons/godOSC/demo/demo_receiver.gd" id="4_47v2p"]
[ext_resource type="Script" path="res://addons/godOSC/demo/demo_receiver2.gd" id="5_qly6e"]
[ext_resource type="Script" path="res://addons/godOSC/demo/test_message.gd" id="5_sb0re"]
[ext_resource type="Script" path="res://addons/godOSC/demo/onoff.gd" id="6_4gcvd"]
[ext_resource type="Script" path="res://addons/godOSC/demo/MessageContainer.gd" id="8_7cxcq"]

[node name="Demo" type="Node2D"]
script = ExtResource("1_jcc48")

[node name="OSCClient" type="Node" parent="."]
script = ExtResource("1_8dhcu")

[node name="OSCServer" type="Node" parent="."]
script = ExtResource("2_ey2x6")

[node name="Cube 1" type="ColorRect" parent="."]
offset_left = 154.0
offset_top = 116.0
offset_right = 194.0
offset_bottom = 156.0
scale = Vector2(1.205, 1.205)

[node name="OSCReceiver" type="Node" parent="Cube 1" node_paths=PackedStringArray("target_server")]
script = ExtResource("4_47v2p")
target_server = NodePath("../../OSCServer")
osc_address = "/cube1"

[node name="Cube 2" type="ColorRect" parent="."]
offset_left = 923.0
offset_top = 144.0
offset_right = 963.0
offset_bottom = 184.0
scale = Vector2(1.075, 1.075)

[node name="OSCReceiver" type="Node" parent="Cube 2" node_paths=PackedStringArray("target_server")]
script = ExtResource("5_qly6e")
target_server = NodePath("../../OSCServer")
osc_address = "/cube2"

[node name="Cube 1 Slider" type="HSlider" parent="."]
offset_left = 164.0
offset_top = 393.0
offset_right = 697.0
offset_bottom = 409.0
min_value = 300.0
max_value = 600.0
value = 300.0

[node name="OSCMessage" type="Node" parent="Cube 1 Slider" node_paths=PackedStringArray("target_client")]
script = ExtResource("5_sb0re")
target_client = NodePath("../../OSCClient")
osc_address = "/cube1"

[node name="CheckButton" type="CheckButton" parent="Cube 1 Slider"]
layout_mode = 0
offset_left = -4.0
offset_top = -36.0
offset_right = 40.0
offset_bottom = -12.0
button_pressed = true
script = ExtResource("6_4gcvd")

[node name="Cube 2 Slider" type="HSlider" parent="."]
offset_left = 796.0
offset_top = 381.0
offset_right = 1113.0
offset_bottom = 397.0
max_value = 2.0
step = 0.01
value = 1.0

[node name="OSCMessage" type="Node" parent="Cube 2 Slider" node_paths=PackedStringArray("target_client")]
script = ExtResource("5_sb0re")
target_client = NodePath("../../OSCClient")
osc_address = "/cube2"

[node name="CheckButton" type="CheckButton" parent="Cube 2 Slider"]
layout_mode = 0
offset_left = -9.0
offset_top = -31.0
offset_right = 35.0
offset_bottom = -7.0
button_pressed = true
script = ExtResource("6_4gcvd")

[node name="Label" type="Label" parent="."]
offset_left = 311.0
offset_top = 444.0
offset_right = 858.0
offset_bottom = 684.0
text = "Use the toggles to enable/disable the sliders from sending OSC messages.
If you are testing using an external program, disable the sliders for more
predictable behavior."

[node name="MessageContainer" type="GridContainer" parent="."]
offset_left = 23.0
offset_top = 18.0
offset_right = 230.0
offset_bottom = 68.0
theme_override_constants/h_separation = 13
columns = 3
script = ExtResource("8_7cxcq")
metadata/_edit_group_ = true

[node name="Add" type="Label" parent="MessageContainer"]
layout_mode = 2
text = "Address"

[node name="Val" type="Label" parent="MessageContainer"]
layout_mode = 2
text = "Value"

[node name="Time" type="Label" parent="MessageContainer"]
layout_mode = 2
text = "Time Stamp"

[node name="Add1" type="Label" parent="MessageContainer"]
layout_mode = 2

[node name="Val1" type="Label" parent="MessageContainer"]
layout_mode = 2

[node name="Time1" type="Label" parent="MessageContainer"]
layout_mode = 2

[node name="GateOn" type="Button" parent="."]
offset_left = 65.0
offset_top = 566.0
offset_right = 259.0
offset_bottom = 620.0
text = "SEND \"/synth1/gate 1\" 
ON PORT 4848"

[node name="GateOff" type="Button" parent="."]
offset_left = 378.0
offset_top = 566.0
offset_right = 582.0
offset_bottom = 620.0
text = "SEND \"/synth1/gate 0\"
 ON PORT 4848"

[node name="OSCClient - OUT" type="Node" parent="."]
script = ExtResource("1_8dhcu")
port = 4848

[connection signal="message_received" from="OSCServer" to="MessageContainer" method="_on_osc_server_message_received"]
[connection signal="button_down" from="GateOn" to="." method="_on_gate_on_button_down"]
[connection signal="button_down" from="GateOff" to="." method="_on_gate_off_button_down"]
